Be relaxed with seconds of 0/0, obviously produced by lightroom

BUG: 246077

svn path=/branches/extragear/graphics/libkexiv2/; revision=1159244